# foil

./: .gitignore  .gitmodules  C2.drawio  Plan_experience.ods  README.md  ROS2NodeGraph.drawio  debug_raw_data_esp.py  tuto_velodyne.md
ATMEGA/: pong.ino
ATMEGA/pong/: pong.ino
Interface_graphique/: Makefile  graphwidget.cpp  graphwidget.h  main.cpp  make_.pro  moc_graphwidget.cpp  moc_slider.cpp  slider.cpp  slider.h  tetrahedre.urdf
cao/: support_imu.ipt  support_imu.stl  support_imu_part1.ipt  support_imu_part1.stl  support_imu_part2.ipt  support_imu_part2.stl  support_servo.ipt  support_servo.stl
drawio/: acoustic_sensors.drawio  elec_foil.drawio  electric_diagramm.drawio  potar.drawio  rtk.drawio  schema_hardware.drawio  schema_principe.drawio
images/: ROS2NodeGraph.drawio  arch_i2.drawio  schema_hardware.drawio
post_traitement_abaques/: README.md  data.csv  show.py
ros2_ws/: foil_consigne_node_old.cpp  sbg_device_uart_default.yaml
ros2_ws/src/battery_status/: CMakeLists.txt  package.xml
ros2_ws/src/battery_status/include/battery_status/: battery_status_node.hpp
ros2_ws/src/battery_status/src/: battery_status_node.cpp
ros2_ws/src/cmd_msg/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msg/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msg/msg/: FoilCmd.msg  FoilConsigne.msg  FoilHeight.msg  FoilObjective.msg  FoilState.msg  ParamConsigne.msg
ros2_ws/src/esp_nuc/: package.xml  setup.cfg  setup.py
ros2_ws/src/esp_nuc/esp_nuc/: node_esp_nuc.py
ros2_ws/src/foil_cmd_servo_msg/: CMakeLists.txt  package.xml
ros2_ws/src/foil_cmd_servo_msg/msg/: FoilCmd.msg
ros2_ws/src/foil_consigne/: CMakeLists.txt  package.xml
ros2_ws/src/foil_consigne/include/foil_consigne/: foil_consigne_node.hpp
ros2_ws/src/foil_consigne/src/: foil_consigne_node.cpp
ros2_ws/src/foil_consigne_msg/: CMakeLists.txt  package.xml
ros2_ws/src/foil_height_sensor_message/: CMakeLists.txt  package.xml
ros2_ws/src/foil_height_sensor_message/msg/: FoilHeight.msg
ros2_ws/src/foil_objective/: CMakeLists.txt  package.xml
ros2_ws/src/foil_objective/include/foil_objective/: foil_objective_node.hpp
ros2_ws/src/foil_objective/src/: foil_objective_node.cpp
ros2_ws/src/foil_objective_msg/: CMakeLists.txt  package.xml
ros2_ws/src/foil_state/: CMakeLists.txt  package.xml
ros2_ws/src/foil_state/include/foil_state/: foil_state_node.hpp
ros2_ws/src/foil_state/msg/: FoilState.msg
ros2_ws/src/foil_state/src/: foil_state_node.cpp
ros2_ws/src/foil_state_msg/: CMakeLists.txt  package.xml
ros2_ws/src/foil_state_msg/msg/: FoilState.msg
ros2_ws/src/launch_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/launch_pkg/launch/: foil.launch.py
ros2_ws/src/plot_trajectory/: package.xml  setup.cfg  setup.py
ros2_ws/src/plot_trajectory/plot_trajectory/: guerledan.tiff  plot_lac.py  plot_trajectory_node.py
ros2_ws/src/sbg_ros2_driver/: CMakeLists.txt  package.xml
ros2_ws/src/sbg_ros2_driver/config/: sbg_device_uart_default.yaml
ros2_ws/src/sbg_ros2_driver/include/sbg_driver/: sbg_device.h
ros2_ws/src/sbg_ros2_driver/src/: sbg_device.cpp
ros2_ws/src/senix_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/senix_driver/senix_driver/: .senixNode.py.swp  senixNode.py  senixNode.py.save
ros2_ws/src/uart/: CMakeLists.txt  package.xml
ros2_ws/src/uart/msg/: cmd.msg
ros2_ws/src/uart/src/: uart.cpp
ros2_ws/src/uart_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/uart_py/uart_py/: node_uart_py.py
ros2_ws/src/utm_proj/: CMakeLists.txt  package.xml
ros2_ws/src/utm_proj/include/utm_proj/: utm_proj_node.h
ros2_ws/src/utm_proj/src/: utm_proj_node.cpp
rules/: my.rules
ultrasound_esp/: platformio.ini
ultrasound_esp/src/: main.cpp  main.cpp.basic  main.cpp.full  main.cpp.potar  main.cpp.timer  test_main.cpp.led  ultrasound_esp.code-workspace
