<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_pkg</name>
  <version>1.0.0</version>
  <description>
    Package used to launch all the nodes together
  </description>
  <author>
    Apolline de Vaulchier
    Louis-Nam Gros
    Ludovic Mustière
    Gwendal Crequer
    Kévin Beaupuy
  </author>
  <maintainer email="apolline.de_vaulchier@ensta-bretagne.org">Apolline</maintainer>
  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sbg_driver</depend>
  <depend>foil_state</depend>
  <depend>foil_objective</depend>
  <depend>foil_consigne</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
