<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="apolline.de_vaulchier@ensta-bretagne.org">apolline</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_depend>foil_consigne</build_depend>
  <build_depend>foil_objective</build_depend>
  <build_depend>foil_state</build_depend>
  <build_depend>sbg_driver</build_depend>
  <build_depend>uart_py</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>foil_cmd_servo_msg</build_depend>
  <build_depend>foil_consigne_msg</build_depend>
  <build_depend>foil_height_sensor_message</build_depend>
  <build_depend>foil_objective_msg</build_depend>
  <build_depend>foil_state_msg</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
